--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Header/logo Title */
 .header {
-  padding: 80px;
+  padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
@@ -67,7 +67,7 @@ body {
   /* IE10 */
   flex: 30%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 40px;
 }
 
 /* Main column */
@@ -76,7 +76,26 @@ body {
   /* IE10 */
   flex: 70%;
   background-color: white;
-  padding: 20px;
+  padding: 40px;
+}
+
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column tomas zijn deel */
+.side-tomas {
+  -ms-flex: 30%;
+  /* IE10 */
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 40px;
+}
+
+/* Main column tomas zijn deel */
+.main-tomas {
+  -ms-flex: 70%;
+  /* IE10 */
+  flex: 70%;
+  background-color: white;
+  padding: 40px;
 }
 
 /* Fake image, just for this example */
