--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,17 @@ p {
 .side-tomas {
   -ms-flex: 30%;
   /* IE10 */
-  flex: 30%;
+  flex: 20%;
   background-color: #f1f1f1;
+  padding: 20px;
+}
+
+/* Main column tomas ontwikkeling zijn deel */
+.main-tomasontwikkeling {
+  -ms-flex: 70%;
+  /* IE10 */
+  flex: 70%;
+  background-color: white;
   padding: 40px;
 }
 
