--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,19 @@ p {
   padding: 70px;
 }
 
+/* Optional styling for the element */
+#fullscreenElement {
+  width: 100%;
+  height: 100vh;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
 /* Dropdown container - needed to position the dropdown content */
 .dropdown {
   float: left;
