--- a/css/style_matilda.css
+++ b/css/style_matilda.css
@@ -69,7 +69,33 @@ iframe {
     width: 60%;
     /* height: 1150px; */
     border: none;
-    margin: 2% 20% 2% 20%;
+    margin: auto;
+}
+
+.video-width {
+    width: 100%;
+    min-width: 400px;
+    max-width: 800px;
+}
+
+.aspect-ratio {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: auto;
+        /* width: 50%;
+    height: auto;
+    margin: auto; */
 }
 
 
@@ -88,7 +114,8 @@ iframe {
     flex: 70%;
     background-color: white;
     padding: 70px;
-  }
+}
+
 /* li {
     display: list-item;
     list-style-position: inside;
