--- a/css/style_matilda.css
+++ b/css/style_matilda.css
@@ -69,7 +69,7 @@ iframe {
     width: 60%;
     /* height: 1150px; */
     border: none;
-    margin: auto;
+    margin: 10px auto;
 }
 
 .video-width {
